--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -2,3 +2,26 @@
 $primary: #F7A715;
 $secondary: #89CFDf;
 $dark: #565656;
+
+/* Utilities */
+.mask {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.1);
+    background-attachment: fixed;
+}
+
+.bg-image {
+    position: relative;
+    overflow: hidden;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: 50%;
+    height: 75vh;
+}
