--- a/src/app/shared/components/list-eight/list-eight.component.html
+++ b/src/app/shared/components/list-eight/list-eight.component.html
@@ -1,4 +1,4 @@
-<div class="container text-center p-5">
+<div class="container-fluid text-center p-5">
     <div class="row">
         <div class="col">
             <h1>Mejores productos y más demandados</h1>
@@ -6,16 +6,140 @@
     </div>
     <div class="row">
         <div class="col">
-            <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//rcm-eu.amazon-adsystem.com/e/cm?lt1=_blank&bc1=000000&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=lqr-21&language=es_ES&o=30&p=8&l=as4&m=amazon&f=ifr&ref=as_ss_li_til&asins=B08C1KN5J2&linkId=96e5622923b2c904ef01f7e97bcac780"></iframe>
+            <div class="product-card text-center">
+                <div class="product-image">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/81wdE3J6V1L._AC_SL1500_.jpg"class="img img-responsive">
+                </div>
+                <div class="product-content">
+                    <div class="product-name">
+                        Fire TV Stick Lite con mando por voz Alexa
+                    </div>
+                    <div class="product-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                        nonumy eirmod tempor.</div>
+                    <div class="row">
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>TWEETS</p>
+                                <h4>1300</h4>
+                            </div>
+                        </div>
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>FOLLOWERS</p>
+                                <h4>250</h4>
+                            </div>
+                        </div>
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>FOLLOWING</p>
+                                <h4>168</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col">
-            <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//rcm-eu.amazon-adsystem.com/e/cm?lt1=_blank&bc1=000000&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=lqr-21&language=es_ES&o=30&p=8&l=as4&m=amazon&f=ifr&ref=as_ss_li_til&asins=B08C1KN5J2&linkId=96e5622923b2c904ef01f7e97bcac780"></iframe>
+            <div class="product-card text-center">
+                <div class="product-image">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/61crLvH7hGL._AC_SL1001_.jpg"class="img img-responsive">
+                </div>
+                <div class="product-content">
+                    <div class="product-name">
+                        POCO X3 Pro, Smartphone 8+256 GB, 6,67”
+                    </div>
+                    <div class="product-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                        nonumy eirmod tempor.</div>
+                    <div class="row">
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>TWEETS</p>
+                                <h4>1300</h4>
+                            </div>
+                        </div>
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>FOLLOWERS</p>
+                                <h4>250</h4>
+                            </div>
+                        </div>
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>FOLLOWING</p>
+                                <h4>168</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col">
-            <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//rcm-eu.amazon-adsystem.com/e/cm?lt1=_blank&bc1=000000&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=lqr-21&language=es_ES&o=30&p=8&l=as4&m=amazon&f=ifr&ref=as_ss_li_til&asins=B08C1KN5J2&linkId=96e5622923b2c904ef01f7e97bcac780"></iframe>
+            <div class="product-card text-center">
+                <div class="product-image">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/61yw1ZvAYIL._AC_SL1000_.jpg"class="img img-responsive">
+                </div>
+                <div class="product-content">
+                    <div class="product-name">
+                        Cecotec Pure Aroma 150 Yin
+                    </div>
+                    <div class="product-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                        nonumy eirmod tempor.</div>
+                    <div class="row">
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>TWEETS</p>
+                                <h4>1300</h4>
+                            </div>
+                        </div>
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>FOLLOWERS</p>
+                                <h4>250</h4>
+                            </div>
+                        </div>
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>FOLLOWING</p>
+                                <h4>168</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="col">
-            <iframe style="width:120px;height:240px;" marginwidth="0" marginheight="0" scrolling="no" frameborder="0" src="//rcm-eu.amazon-adsystem.com/e/cm?lt1=_blank&bc1=000000&IS2=1&bg1=FFFFFF&fc1=000000&lc1=0000FF&t=lqr-21&language=es_ES&o=30&p=8&l=as4&m=amazon&f=ifr&ref=as_ss_li_til&asins=B08C1KN5J2&linkId=96e5622923b2c904ef01f7e97bcac780"></iframe>
+            <div class="product-card text-center">
+                <div class="product-image">
+                    <img src="https://images-na.ssl-images-amazon.com/images/I/610NAk2n0ML._AC_SL1000_.jpg"class="img img-responsive">
+                </div>
+                <div class="product-content">
+                    <div class="product-name">
+                        Cecotec Robot aspirador y fregasuelos Conga 1090
+                    </div>
+                    <div class="product-description">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam
+                        nonumy eirmod tempor.</div>
+                    <div class="row">
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>TWEETS</p>
+                                <h4>1300</h4>
+                            </div>
+                        </div>
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>FOLLOWERS</p>
+                                <h4>250</h4>
+                            </div>
+                        </div>
+                        <div class="col-xs">
+                            <div class="product-overview">
+                                <p>FOLLOWING</p>
+                                <h4>168</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
