--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -23,5 +23,88 @@ $dark: #565656;
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 50%;
-    height: 75vh;
+    height: 65vh;
+}
+
+.product-card {
+    max-width: 350px;
+    background-color: #FFF;
+    border-radius: 5px;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    position: relative;
+    margin: 10px auto;
+}
+
+.product-card .product-image {
+    height: 300px;
+}
+
+.product-card img {
+    transition: all 0.25s linear;
+    width: 100%;
+}
+
+.product-card .product-content {
+    position: relative;
+    padding: 15px;
+    background-color: #FFF;
+}
+
+.product-card .product-name {
+    font-weight: bold;
+    position: absolute;
+    left: 0px;
+    right: 0px;
+    top: -87px;
+    color: #FFF;
+    font-size: 17px;
+    transform: skew(0deg, 357deg);
+    background: #e58d00ba;
+    padding: 0.85rem;
+    min-height: 77px;
+}
+
+.product-card .product-name p {
+    font-weight: 600;
+    font-size: 13px;
+    letter-spacing: 1.5px;
+}
+
+.product-card .product-description {
+    color: #777;
+    font-size: 12px;
+    padding: 10px;
+}
+
+.product-card .product-overview {
+    padding: 15px 0px;
+}
+
+.product-card .product-overview p {
+    font-size: 10px;
+    font-weight: 600;
+    color: #777;
+}
+
+.product-card .product-overview h4 {
+    color: #273751;
+    font-weight: bold;
+}
+
+.product-card .product-content::before {
+    content: "";
+    position: absolute;
+    height: 20px;
+    top: -10px;
+    left: 0px;
+    right: 0px;
+    background-color: #FFF;
+    z-index: 0;
+    transform: skewY(-3deg);
+}
+
+.product-card:hover img {
+    transform: rotate(5deg) scale(1.1, 1.1);
+    filter: brightness(110%);
 }
