--- a/src/app/layout/home/home-page/home-page.component.html
+++ b/src/app/layout/home/home-page/home-page.component.html
@@ -1,2 +1,24 @@
 <app-hero-header></app-hero-header>
-<app-list-eight></app-list-eight>
+
+<div class="container-fluid text-center p-5">
+    <div class="row">
+        <div class="col">
+            <h1 class="bebas text-dark display-3 py-3">Mejores productos y más demandados</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of home_intro">
+            <app-product-card [product]="product"></app-product-card>
+        </div>
+    </div>
+</div>
+
+<app-title-header></app-title-header>
+
+<div class="container-fluid text-center p-5">
+    <div class="row">
+        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of home_technology">
+            <app-product-card [product]="product"></app-product-card>
+        </div>
+    </div>
+</div>
