--- a/src/app/shared/components/product-rating/product-rating.component.html
+++ b/src/app/shared/components/product-rating/product-rating.component.html
@@ -1,1 +1,1 @@
-<p>product-rating works!</p>
+<a [innerHTML]="rating_start" href="{{ link }}" placement="left" ngbTooltip="Ver opiniones" tooltipClass="tooltip-primary-left"></a>
