--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,6 @@
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 @import "~bootstrap/scss/bootstrap";
 
+
+/* Importing Bootstrap SCSS file. */
+@import '~bootstrap/scss/bootstrap';
