Tecnologia home terminada

--- a/src/app/shared/components/title-header/title-header.component.html
+++ b/src/app/shared/components/title-header/title-header.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid bg-gradient py-1 title-header">
     <div class="row">
-        <div class="col text-center">
+        <div class="col-lg-5 text-right">
             <img src="../../../../assets/images/tech_002.png" alt="tecnologia">
         </div>
-        <div class="col">
+        <div class="col-lg-7">
             <h2 class="bebas text-dark">Tecnología</h2>
         </div>
     </div>
