--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -124,7 +124,7 @@ $danger: #b7212f;
 /* Title header */
 .title-header h2 {
     font-size: 11vw;
-    transform: translateX(-200px);
+    /*transform: translateX(-200px);*/
 }
 
 /* Tooltips */
