El modulo de titulos de seccion ya recibe datos en un objeto

--- a/src/app/shared/components/title-header/title-header.component.html
+++ b/src/app/shared/components/title-header/title-header.component.html
@@ -1,10 +1,10 @@
 <div class="container-fluid bg-gradient py-1 title-header">
     <div class="row">
         <div class="col-lg-5 text-right">
-            <img src="../../../../assets/images/tech_002.png" alt="tecnologia">
+            <img src="{{ info.img }}" alt="{{ info.alt }}">
         </div>
         <div class="col-lg-7">
-            <h2 class="bebas text-dark">Tecnología</h2>
+            <h2 class="bebas text-dark">{{ info.title }}</h2>
         </div>
     </div>
 </div>
