Hogar home terminada

--- a/src/app/shared/components/title-header/title-header.component.html
+++ b/src/app/shared/components/title-header/title-header.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid bg-gradient py-1 title-header">
     <div class="row">
-        <div class="col-lg-5 text-right">
+        <div class="col-lg-5 d-flex align-items-center justify-content-end">
             <img src="{{ info.img }}" alt="{{ info.alt }}">
         </div>
-        <div class="col-lg-7">
+        <div class="col-lg-7 d-flex align-items-center">
             <h2 class="bebas text-dark">{{ info.title }}</h2>
         </div>
     </div>
