--- a/src/app/layout/home/home-page/home-page.component.html
+++ b/src/app/layout/home/home-page/home-page.component.html
@@ -32,3 +32,13 @@
         </div>
     </div>
 </div>
+
+<app-title-header [info]="info_header_sport"></app-title-header>
+
+<div class="container-fluid text-center p-5">
+    <div class="row">
+        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of home_sport">
+            <app-product-card [product]="product"></app-product-card>
+        </div>
+    </div>
+</div>
