Tarjetas de productos igual altura

--- a/src/app/shared/components/product-card/product-card.component.html
+++ b/src/app/shared/components/product-card/product-card.component.html
@@ -1,4 +1,4 @@
-<div class="product-card text-center">
+<div class="product-card text-center h-100 d-flex flex-column justify-content-between">
     <div class="product-image">
         <img src="{{ product.img }}"
             class="img img-responsive">
