hotfix product card

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -67,6 +67,7 @@ $danger: #b7212f;
     position: relative;
     padding: 15px;
     background-color: #FFF;
+    bottom: -10px;
 }
 
 .product-card .product-name {
