Ruoterlink implementado en footer y navbar

--- a/src/app/shared/components/hero-header/hero-header.component.html
+++ b/src/app/shared/components/hero-header/hero-header.component.html
@@ -4,7 +4,7 @@
             <div class="text-white">
                 <img src="../../../../assets/images/logo_blanco.png" alt="Responsive image" width="350px">
                 <h4 class="mb-3">¡Y no te vuelvas loc@ buscando!</h4>
-                <a class="btn btn-outline-light btn-lg" href="#!" role="button">Call to action</a>
+                <a class="btn btn-outline-light btn-lg" href="#!" role="button">Registrate</a>
             </div>
         </div>
     </div>
