--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -12,19 +12,19 @@
           <a routerLink="home" routerLinkActive="active" class="nav-link">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/tecnologia">Tecnologia</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/tecnologia">Tecnologia</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/hogar">Hogar</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/hogar">Hogar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/deportes">Deportes</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/deportes">Deportes</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/cursos">Cursos</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/cursos">Cursos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/videojuegos">Videojuegos</a>
+          <a class="nav-link" routerLinkActive="active" routerLink="/videojuegos">Videojuegos</a>
         </li>
         <!--
         <li class="nav-item dropdown">
