--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -49,16 +49,16 @@
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="#!" class="text-white">Link 1</a>
+              <a class="text-white" routerLink="/tecnologia">Tecnología</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 2</a>
+              <a class="text-white" routerLink="/hogar">Hogar</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 3</a>
+              <a class="text-white" routerLink="/deportes">Deportes</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 4</a>
+              <a class="text-white" routerLink="/cursos">Cursos</a>
             </li>
           </ul>
         </div>
@@ -66,20 +66,20 @@
 
         <!--Grid column-->
         <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-          <h5 class="text-uppercase">Políticas</h5>
+          <h5 class="text-uppercase">Enlaces</h5>
 
           <ul class="list-unstyled mb-0">
             <li>
-              <a href="#!" class="text-white">Link 1</a>
+              <a class="text-white" routerLink="/videojuegos">Videojuegos</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 2</a>
+              <a href="#!" class="text-white">Política de privacidad</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 3</a>
+              <a href="#!" class="text-white">Política de cookies</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Link 4</a>
+              <a href="#!" class="text-white">Politica de afiliados</a>
             </li>
           </ul>
         </div>
@@ -94,7 +94,7 @@
   <!-- Copyright -->
   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2020 Copyright:
-    <a class="text-white" href="http://top8.es">Top8</a>
+    <a class="text-white" routerLink="/home">Top8</a>
   </div>
   <!-- Copyright -->
 </footer>
