--- a/src/app/shared/components/hero-header/hero-header.component.html
+++ b/src/app/shared/components/hero-header/hero-header.component.html
@@ -1,10 +1,14 @@
 <div class="p-5 text-center bg-image container-fluid" style="background-image: url('../../assets/images/001.jpg');">
     <div class="mask">
-        <div class="d-flex justify-content-end align-items-center h-100 px-5">
-            <div class="text-white">
-                <img src="../../../../assets/images/logo_blanco.png" alt="Responsive image" width="350px">
-                <h4 class="mb-3">¡Y no te vuelvas loc@ buscando!</h4>
-                <a class="btn btn-outline-light btn-lg" href="#!" role="button">Registrate</a>
+        <div class="row w-100 h-100 align-items-center">
+            <div class="col">
+            </div>
+            <div class="col">
+                <div class="text-white">
+                    <img src="../../../../assets/images/logo_blanco.png" alt="Responsive image" width="350px">
+                    <h4 class="mb-3">¡Y no te vuelvas loc@ buscando!</h4>
+                    <a class="btn btn-outline-light btn-lg" href="#!" role="button">Registrate</a>
+                </div>
             </div>
         </div>
     </div>
