--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -125,7 +125,7 @@ $danger: #b7212f;
 /* Title header */
 .title-header h2 {
     font-size: 11vw;
-    /*transform: translateX(-200px);*/
+    transform: translateY(17px);
 }
 
 /* Tooltips */
