Hero header, recibe parametros para reutizar el componente

--- a/src/app/layout/home/home-page/home-page.component.html
+++ b/src/app/layout/home/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<app-hero-header></app-hero-header>
+<app-hero-header [info]="info_hero"></app-hero-header>
 
 <div class="container-fluid text-center p-5">
     <div class="row">
