Comentarios en la home

--- a/src/app/layout/home/home-page/home-page.component.html
+++ b/src/app/layout/home/home-page/home-page.component.html
@@ -1,5 +1,8 @@
+<!-- HERO HEADER -->
 <app-hero-header [info]="info_hero"></app-hero-header>
+<!-- END HERO HEADER -->
 
+<!-- TOP 8 BEST PRODUCT -->
 <div class="container-fluid text-center p-5">
     <div class="row">
         <div class="col">
@@ -12,9 +15,13 @@
         </div>
     </div>
 </div>
+<!-- END TOP 8 BEST PRODUCT -->
 
+<!-- HEADER TECHNOLOGY PRODUCT -->
 <app-title-header [info]="info_header_technology"></app-title-header>
+<!-- END HEADER TECHNOLOGY PRODUCT -->
 
+<!-- TOP 8 BEST TECHNOLOGY PRODUCT -->
 <div class="container-fluid text-center p-5">
     <div class="row">
         <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of home_technology">
@@ -22,9 +29,13 @@
         </div>
     </div>
 </div>
+<!-- TOP 8 BEST TECHNOLOGY PRODUCT -->
 
+<!-- HEADER HOUSE PRODUCT -->
 <app-title-header [info]="info_header_house"></app-title-header>
+<!-- HEADER HOUSE PRODUCT -->
 
+<!-- TOP 8 BEST HOUSE PRODUCT -->
 <div class="container-fluid text-center p-5">
     <div class="row">
         <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of home_house">
@@ -32,9 +43,13 @@
         </div>
     </div>
 </div>
+<!-- TOP 8 BEST HOUSE PRODUCT -->
 
+<!-- HEADER SPORTS PRODUCT -->
 <app-title-header [info]="info_header_sport"></app-title-header>
+<!-- HEADER SPORTS PRODUCT -->
 
+<!-- TOP 8 BEST SPORTS PRODUCT -->
 <div class="container-fluid text-center p-5">
     <div class="row">
         <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of home_sport">
@@ -42,3 +57,4 @@
         </div>
     </div>
 </div>
+<!-- TOP 8 BEST SPORTS PRODUCTT -->
