header de todas las secciones y json de secciones

--- a/src/app/shared/components/hero-header/hero-header.component.html
+++ b/src/app/shared/components/hero-header/hero-header.component.html
@@ -1,4 +1,4 @@
-<div class="p-5 text-center bg-image container-fluid" style="background-image: url('../../assets/images/001.jpg');">
+<div class="p-5 text-center bg-image container-fluid" style="background-image: url('{{ info.img }}');">
     <div class="mask">
         <div class="row w-100 h-100 align-items-center">
             <div class="col">
