--- a/src/app/layout/sports/sports-page/sports-page.component.html
+++ b/src/app/layout/sports/sports-page/sports-page.component.html
@@ -1,1 +1,18 @@
-<p>sports-page works!</p>
+<!-- HERO HEADER -->
+<app-hero-header [info]="info_hero"></app-hero-header>
+<!-- END HERO HEADER -->
+
+<!-- TOP 8 BEST TECHNOLOGY PRODUCT -->
+<div class="container-fluid text-center p-5">
+    <div class="row">
+        <div class="col">
+            <h1 class="bebas text-dark display-3 py-3">Mejores productos y más demandados</h1>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of sports_intro">
+            <app-product-card [product]="product"></app-product-card>
+        </div>
+    </div>
+</div>
+<!-- TOP 8 BEST TECHNOLOGY PRODUCT -->
