--- a/src/app/layout/technology/technology-page/technology-page.component.html
+++ b/src/app/layout/technology/technology-page/technology-page.component.html
@@ -16,3 +16,60 @@
     </div>
 </div>
 <!-- TOP 8 BEST TECHNOLOGY PRODUCT -->
+
+<!-- HEADER TECHNOLOGY MOBILE -->
+<app-title-header [info]="info_header_mobile"></app-title-header>
+<!-- END HEADER TECHNOLOGY MOBILE -->
+
+<!-- TOP 8 BEST TECHNOLOGY MOBILE -->
+<div class="container-fluid text-center p-5">
+    <div class="row">
+        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of technology_mobile">
+            <app-product-card [product]="product"></app-product-card>
+        </div>
+    </div>
+</div>
+<!-- TOP 8 BEST TECHNOLOGY MOBILE -->
+
+<!-- HEADER TECHNOLOGY PC -->
+<app-title-header [info]="info_header_pc"></app-title-header>
+<!-- END HEADER TECHNOLOGY PC -->
+
+<!-- TOP 8 BEST TECHNOLOGY PC -->
+<div class="container-fluid text-center p-5">
+    <div class="row">
+        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of technology_pc">
+            <app-product-card [product]="product"></app-product-card>
+        </div>
+    </div>
+</div>
+<!-- TOP 8 BEST TECHNOLOGY PC -->
+
+<!-- HEADER TECHNOLOGY GAMING -->
+<app-title-header [info]="info_header_gaming"></app-title-header>
+<!-- END HEADER TECHNOLOGY GAMING -->
+
+<!-- TOP 8 BEST TECHNOLOGY GAMING -->
+<div class="container-fluid text-center p-5">
+    <div class="row">
+        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of technology_gaming">
+            <app-product-card [product]="product"></app-product-card>
+        </div>
+    </div>
+</div>
+<!-- TOP 8 BEST TECHNOLOGY TV & AUDIO -->
+
+<!-- HEADER TECHNOLOGY GAMING -->
+<app-title-header [info]="info_header_tv_audio"></app-title-header>
+<!-- END HEADER TECHNOLOGY TV & AUDIO -->
+
+<!-- TOP 8 BEST TECHNOLOGY TV & AUDIO -->
+<div class="container-fluid text-center p-5">
+    <div class="row">
+        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of technology_tv_audio">
+            <app-product-card [product]="product"></app-product-card>
+        </div>
+    </div>
+</div>
+<!-- TOP 8 BEST TECHNOLOGY TV & AUDIO -->
+
