se consumen json en todas las secciones de amazon

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -73,13 +73,13 @@
               <a class="text-white" routerLink="/videojuegos">Videojuegos</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Política de privacidad</a>
+              <a class="text-white" routerLink="/politicas">Política de privacidad</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Política de cookies</a>
+              <a class="text-white" routerLink="/politicas">Política de cookies</a>
             </li>
             <li>
-              <a href="#!" class="text-white">Politica de afiliados</a>
+              <a class="text-white" routerLink="/politicas">Politica de afiliados</a>
             </li>
           </ul>
         </div>
