La web consume json generados con scripts de python

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -58,6 +58,10 @@ $danger: #b7212f;
     max-height: 250px;
 }
 
+.product-image {
+    padding: 2rem;
+}
+
 .product-card img {
     transition: all 0.25s linear;
     width: 100%;
