Todos los json ahora son reales y generados por web scrape

--- a/src/app/layout/technology/technology-page/technology-page.component.html
+++ b/src/app/layout/technology/technology-page/technology-page.component.html
@@ -70,7 +70,7 @@
 <!-- TOP 8 BEST TECHNOLOGY pc -->
 
 <!-- HEADER TECHNOLOGY LAPTOP -->
-<app-title-header [info]="info_header_pc"></app-title-header>
+<app-title-header [info]="info_header_laptop"></app-title-header>
 <!-- END HEADER TECHNOLOGY LAPTOP -->
 <!-- TOP 8 BEST TECHNOLOGY LAPTOP -->
 <div class="container-fluid text-center p-5">
