--- a/src/app/layout/house/house-page/house-page.component.html
+++ b/src/app/layout/house/house-page/house-page.component.html
@@ -17,19 +17,19 @@
 </div>
 <!-- TOP 8 BEST HOUSE PRODUCT -->
 
-<!-- HEADER HOUSE APPLIANCES -->
-<app-title-header [info]="info_header_appliances"></app-title-header>
-<!-- END HEADER HOUSE APPLIANCES -->
+<!-- HEADER HOUSE KITCHEN -->
+<app-title-header [info]="info_header_kitchen"></app-title-header>
+<!-- END HEADER HOUSE KITCHEN -->
 
-<!-- TOP 8 BEST HOUSE APPLIANCES -->
+<!-- TOP 8 BEST HOUSE KITCHEN -->
 <div class="container-fluid text-center p-5">
     <div class="row">
-        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of house_appliances">
+        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of house_kitchen">
             <app-product-card [product]="product"></app-product-card>
         </div>
     </div>
 </div>
-<!-- TOP 8 BEST HOUSE APPLIANCES -->
+<!-- TOP 8 BEST HOUSE KITCHEN -->
 
 <!-- HEADER HOUSE HEALTH -->
 <app-title-header [info]="info_header_health"></app-title-header>
@@ -45,19 +45,19 @@
 </div>
 <!-- TOP 8 BEST HOUSE HEALTH -->
 
-<!-- HEADER HOUSE KITCHEN -->
-<app-title-header [info]="info_header_home_kitchen"></app-title-header>
-<!-- END HEADER HOUSE KITCHEN -->
+<!-- HEADER HOUSE FURNITURE -->
+<app-title-header [info]="info_header_furniture"></app-title-header>
+<!-- END HEADER HOUSE FURNITURE -->
 
-<!-- TOP 8 BEST HOUSE KITCHEN -->
+<!-- TOP 8 BEST HOUSE FURNITURE -->
 <div class="container-fluid text-center p-5">
     <div class="row">
-        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of house_home_kitchen">
+        <div class="col-md-6 col-lg-3 pb-5" *ngFor="let product of house_furniture">
             <app-product-card [product]="product"></app-product-card>
         </div>
     </div>
 </div>
-<!-- TOP 8 BEST HOUSE KITCHEN -->
+<!-- TOP 8 BEST HOUSE FURNITURE -->
 
 <!-- HEADER HOUSE LIGHTING -->
 <app-title-header [info]="info_header_lighting"></app-title-header>
